Fixed styles so that things fit better on small screens.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -49,6 +49,10 @@ input::-webkit-inner-spin-button {
 
 /** Core and Layout */
 
+#app {
+    min-width: 700px;
+}
+
 html,
 body {
     font-family: sans-serif;
@@ -94,7 +98,7 @@ a {
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
     h2,
     h3 {
         margin: 0;
@@ -169,7 +173,7 @@ section {
         font-size: $small;
         font-family: Bitter, serif;
     }
-    
+
     .controls {
         padding: 20px;
         margin: 0 15px;
@@ -212,7 +216,7 @@ section {
         }
         input[type="file"] {
             // line-height: 30px;
-            height:100%;
+            height: 100%;
         }
     }
 }
@@ -246,36 +250,36 @@ section {
 /** Tables 
  */
 
-input[type='number'],
-td.td-number {
-    text-align: right;
-}
-
-td span {
-    display: block;
-    margin: 0 12px;
-    padding: 6px 12px;
-}
-
 .table {
     table-layout: fixed;
+    font-size: $small;
     .first-column {
         width: 20%;
         font-size: $small;
         text-align: right;
     }
+    input[type='number'],
+    td.td-number {
+        text-align: right;
+    }
+
+    td span {
+        display: block;
+        margin: 0 4px;
+        padding: 6px 0;
+    }
 }
 
-table.four-column td {
+.four-column td {
     max-width: 80% / 3;
 }
 
-table.four-column td {
+.five-column td {
     max-width: 80% / 4;
 }
 
 .test-results {
-    
+
     .fail {
         background-color: $fail;
     }
